tests/baselines/reference/parserInterfaceDeclaration2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration2.ts (5 errors) ====
    interface I implements A {
                ~~~~~~~~~~
!!! error TS1005: '{' expected.
                           ~
!!! error TS1005: ';' expected.
                             ~
!!! error TS1005: ';' expected.
                ~~~~~~~~~~
!!! error TS2304: Cannot find name 'implements'.
                           ~
!!! error TS2304: Cannot find name 'A'.
    }